style.css
/* ... */
.hero h1 {
  font-style: normal;
  font-weight: 700;
  font-size: 40px;
}

footer p {
  width: 327px;
  height: 102px;
  margin: 19px 0;
  font-style: normal;
  font-weight: 400;
  font-size: 20px;
  color: #ebebff;
  text-align: center;
}

.hero p {
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
}

.hero h2 {
  text-align: start;
  font-weight: 500;
  font-size: 16px;
  margin: 10px 0;
  color: #5964c1;
}

.social-container {
  display: flex;
  margin: 5px 0;
  list-style-type: none;
}

.social-container li {
  padding-right: 18px;
}

.work {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 4fr;
  justify-content: center;
  align-items: center;
  width: 100%;
  padding: 114px 24px;
  margin: -100px 0;
  gap: 88px;
  background-color: #f7f7f9;
}

.work p {
  text-align: start;
  height: 76px;
  font-style: normal;
  font-weight: 400;
  font-size: 15px;
  color: #344563;
}

.card {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 16px;
  gap: 12px;
  background: #fff;
  border: 1px solid #dfe1e6;
  border-radius: 16px;
}

.card ul {
  list-style: none;
  margin: -10px;
  padding: 16px;
}

.primarytext li {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 0;
  gap: 12px;
  width: 295px;
}

.w3imgdt {
  display: none;
}

.about h2 {
  font-style: normal;
  font-weight: 700;
  font-size: 40px;
  margin: 80px 0 0 0;
}

.card ul li h2 {
  font-style: normal;
  font-weight: 700;
  font-size: 32px;
  line-height: 44px;
  color: #172b4d;
}

.frame {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 12px;
  height: 32px;
  margin-bottom: 12px;
}

.client {
  text-decoration: none;
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 8px 0;
  width: 55px;
  height: 32px;
}

.role {
  text-decoration: none;
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 8px 0;
  width: 88px;
  height: 32px;
}

.year {
  text-decoration: none;
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 8px 0;
  width: 29px;
  height: 32px;
}

.clienttext {
  width: 55px;
  height: 16px;
  font-style: normal;
  font-weight: 600;
  font-size: 14px;
  color: #344563;
  line-height: 22px;
}

.roletext {
  width: 88px;
  height: 16px;
  font-style: normal;
  font-weight: 600;
  font-size: 12px;
  line-height: 22px;
  color: #7a869a;
}

.yeartext {
  width: 29px;
  height: 16px;
  font-style: normal;
  font-weight: 600;
  font-size: 12px;
  line-height: 22px;
  color: #7a869a;
}

.about p {
  font-weight: 400;
  font-size: 16px;
}

.card ul li p {
  width: 295px;
  font-style: normal;
  font-weight: 400;
  font-size: 15px;
  line-height: 24px;
  color: #344563;
  padding-bottom: 24px;
}

.btn a {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 12px;
  gap: 10px;
  width: 124px;
  height: 48px;
  border: 1px solid #6070ff;
  border-radius: 8px;
  background-color: white;
}

.languages a {
  text-decoration: none;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.card ul li a {
  font-style: normal;
  font-weight: 500;
  font-size: 17px;
  color: #396df2;
}

.btn1 {
  font-style: normal;
  font-weight: 500;
  font-size: 17px;
  color: #396df2;
  background-color: white;
  border: 1px solid #396df2;
  border-radius: 8px;
  padding: 12px;
  align-self: flex-start;
}

.tags {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 26px 0;
  gap: 8px;
  width: 203px;
}

.tag1 {
  text-decoration: none;
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 4px 8px;
  width: 53px;
  background: #ebebff;
  border-radius: 8px;
}

.tag2 {
  text-decoration: none;
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 4px 8px;
  width: 45px;
  background: #ebebff;
  border-radius: 8px;
}

.tag3 {
  text-decoration: none;
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 4px 2px;
  width: 89px;
  background: #ebebff;
  border-radius: 8px;
}

.about h3 {
  text-align: start;
  font-weight: 500;
  font-size: 16px;
  margin: 10px 0;
  color: #7f8cff;
}

.lang-text h3 {
  font-weight: 500;
  font-size: 20px;
  color: black;
  align-self: center;
}

.languages h2 {
  font-style: normal;
  font-weight: 500;
  font-size: 15px;
  color: #253858;
}

.tags a h3 {
  width: 29px;
  height: 16px;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  letter-spacing: 0.03em;
  color: #6070ff;
  line-height: 16px;
  text-align: center;
}

.btn {
  width: 295px;
  height: 72px;
  margin: 12px 2px;
}

.btn a h6 {
  width: 100px;
  height: 24px;
  font-style: normal;
  font-weight: 500;
  font-size: 17px;
  text-align: center;
  color: #396df2;
}

.btn a:hover {
  background: #6070ff;
  transition: 0.8ms;
  color: white;
  box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
}

.btn a:active {
  background: #2230d2;
  transition: 0.8ms;
  color: white;
}

.btn1:hover {
  background: #6070ff;
  transition: 0.8ms;
  color: white;
}

.btn1:active {
  background: #2230d2;
  transition: 0.8ms;
  color: white;
}

.about-container {
  width: 100%;
  margin: 100px 0 0 0;
  padding: 0;
}

.about {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  gap: 12px;
  border: 1px solid white;
  border-top-right-radius: 50px;
  background: white;
  padding: 100px 24px;
  color: #172b4d;
}

section .languages {
  width: 100%;
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

footer h2 {
  height: 56px;
  margin-top: 120px;
  font-style: normal;
  font-weight: 700;
  font-size: 40px;
  color: #fff;
  text-align: center;
}

.languages h3 {
  font-style: normal;
  font-weight: 500;
  font-size: 20px;
  text-align: start;
}
/* ... */

